@startuml
skinparam monochrome false

package "subscription.application" {
  class SubscriptionStore {
    - subscriptionSignal: Signal<Subscription>
    - plansSignal: Signal<Plan[]>
    - subscriptionApi: SubscriptionApi
    + subscription: Signal<Subscription>
    + plans: Signal<Plan[]>
    + loadPlans()
    + loadSubscription(organizationId: string)
    + createSubscription(request: CreateSubscriptionRequest)
    + upgradeSubscription(id: string, planId: string)
    + cancelSubscription(id: string)
  }
}

package "subscription.infrastructure" {
  class SubscriptionApi {
    - baseUrl: string
    - http: HttpClient
    + createSubscription(request: CreateSubscriptionRequest): Observable<SubscriptionResource>
    + getSubscriptionByOrganization(organizationId: string): Observable<SubscriptionResource>
    + upgradeSubscription(id: string, planId: string): Observable<SubscriptionResource>
    + cancelSubscription(id: string): Observable<void>
    + getAllPlans(): Observable<PlanResource[]>
  }
  class SubscriptionAssembler {
    + toEntityFromResource(resource: SubscriptionResource): Subscription
  }
  class PlanAssembler {
    + toEntityFromResource(resource: PlanResource): Plan
    + toEntitiesFromResponse(resources: PlanResource[]): Plan[]
  }
  interface SubscriptionResource {
    + id: string
    + organizationId: string
    + planId: string
    + state: string
    + startDate: string
    + endDate: string
  }
  interface PlanResource {
    + id: string
    + planTier: string
    + maxRoutes: number
    + maxDrivers: number
    + price: number
  }
  interface CreateSubscriptionRequest {
    + organizationId: string
    + planId: string
  }
}

' ─── Referencias a otros paquetes ────────────────────────────────────────────
package "subscription.domain.model" {
  class Subscription {
  }
  class Plan {
  }
}

SubscriptionStore --> SubscriptionApi : «uses»
SubscriptionStore --> Subscription : «uses»
SubscriptionStore --> Plan : «uses»
SubscriptionApi --> SubscriptionAssembler : «uses»
SubscriptionApi --> PlanAssembler : «uses»
SubscriptionApi ..> CreateSubscriptionRequest : «uses»
SubscriptionApi ..> SubscriptionResource : «returns»
SubscriptionApi ..> PlanResource : «returns»
SubscriptionAssembler --> Subscription : «creates»
SubscriptionAssembler ..> SubscriptionResource : «transforms»
PlanAssembler --> Plan : «creates»
PlanAssembler ..> PlanResource : «transforms»

@enduml
